# peregrine

./: .gitignore  Cargo.toml  README.md  check_plugins_schema.rs  index.html  package.json  test_install.rs  test_plugin_edit.rs  test_plugins.rs  test_plugins2.rs  test_plugins3.rs  test_plugins_json.rs  test_plugins_json2.rs  test_plugins_mgr.rs  tsconfig.json  vite.config.ts
crates/peregrine-adapters/: Cargo.toml
crates/peregrine-adapters/src/: lib.rs
crates/peregrine-adapters/src/move_analyzer/: adapter.rs  command.rs  error.rs  mod.rs  settings.rs  system.rs
crates/peregrine-adapters/src/sui/: adapter.rs  bundled.rs  command.rs  error.rs  keys.rs  mod.rs  settings.rs  status.rs  system.rs  tests.rs
crates/peregrine-analysis-engine/: Cargo.toml
crates/peregrine-analysis-engine/src/: adapter_stage.rs  engine.rs  lib.rs  registry.rs
crates/peregrine-anthropic/: Cargo.toml
crates/peregrine-anthropic/src/: client.rs  lib.rs  model_provider.rs  request.rs  sse.rs
crates/peregrine-anthropic/tests/: clients.rs
crates/peregrine-api/: Cargo.toml
crates/peregrine-api/src/: api_bridge.rs  api_bridge_tests.rs  auth.rs  common.rs  debug_context.rs  error.rs  files.rs  lib.rs  provider.rs  rate_limits.rs  search.rs  telemetry.rs
crates/peregrine-api/src/endpoint/: chat_completions.rs  compact.rs  images.rs  memories.rs  mod.rs  models.rs  realtime_call.rs  responses.rs  responses_websocket.rs  search.rs  session.rs
crates/peregrine-api/src/requests/: headers.rs  responses.rs
crates/peregrine-api/src/sse/: chat_completions.rs  responses.rs
crates/peregrine-api/tests/: clients.rs  models_integration.rs  realtime_websocket_e2e.rs  sse_end_to_end.rs
crates/peregrine-app-server/: Cargo.toml
crates/peregrine-app-server-client/: Cargo.toml
crates/peregrine-app-server-client/src/: lib.rs  remote.rs
crates/peregrine-app-server-protocol/: Cargo.toml
crates/peregrine-app-server-protocol/schema/json/: ApplyPatchApprovalParams.json  ChatgptAuthTokensRefreshParams.json  ClientRequest.json  ExecCommandApprovalParams.json  FuzzyFileSearchResponse.json  FuzzyFileSearchSessionUpdatedNotification.json  McpServerElicitationRequestParams.json  (+4 more)
crates/peregrine-app-server-protocol/src/: export.rs  jsonrpc_lite.rs
crates/peregrine-app-server-protocol/tests/: schema_fixtures.rs
crates/peregrine-app-server/src/: analytics_utils.rs  app_server_tracing.rs  attestation.rs  audit_events.rs  bespoke_event_handling.rs  command_exec.rs  config_manager.rs  config_manager_agent_roles.rs  config_manager_service.rs  config_manager_service_tests.rs  dynamic_tools.rs  error_code.rs  extensions.rs  filters.rs  fs_watch.rs  fuzzy_file_search.rs  in_process.rs  lib.rs  main.rs  mcp_refresh.rs  message_processor.rs  message_processor_tracing_tests.rs  models.rs  outgoing_message.rs  request_processors.rs  request_serialization.rs  server_request_error.rs  skills_watcher.rs  thread_state.rs  thread_status.rs  transport.rs  transport_tests.rs  workspace_settings.rs
crates/peregrine-app-server/tests/: all.rs  model_provider.rs
crates/peregrine-attack-surface/: Cargo.toml
crates/peregrine-attack-surface/src/: lib.rs
crates/peregrine-audit-store/: Cargo.toml
crates/peregrine-audit-store/src/: lib.rs  operations.rs  report.rs
crates/peregrine-bytecode/: Cargo.toml
crates/peregrine-bytecode-view/: Cargo.toml
crates/peregrine-bytecode-view/src/: lib.rs
crates/peregrine-bytecode/src/: lib.rs
crates/peregrine-dynamic-analysis/: Cargo.toml
crates/peregrine-dynamic-analysis/src/: lib.rs
crates/peregrine-helper/: Cargo.toml
crates/peregrine-helper/src/: lib.rs  main.rs
crates/peregrine-import-engine/: Cargo.toml
crates/peregrine-mcp-client/: Cargo.toml
crates/peregrine-mcp-client/src/: lib.rs  resolver.rs  runtime.rs
crates/peregrine-mcp-protocol/: Cargo.toml
crates/peregrine-mcp-protocol/src/: bytecode.rs  lib.rs
crates/peregrine-mcp-server/: Cargo.toml
crates/peregrine-mcp-server/src/: command.rs  lib.rs  main.rs  server.rs
crates/peregrine-mcp-server/sui/: Cargo.toml
crates/peregrine-mcp-server/sui-move-analyzer/: Cargo.toml
crates/peregrine-memwal/: Cargo.toml
crates/peregrine-memwal/src/: compatibility.rs  error.rs  lib.rs  transport.rs  utils.rs
crates/peregrine-model-provider/: Cargo.toml
crates/peregrine-model-provider/src/: auth.rs  bearer_auth_provider.rs  identity.rs  lib.rs  models_endpoint.rs  provider.rs  provider_catalog.rs
crates/peregrine-models-manager/: Cargo.toml  models.json
crates/peregrine-models-manager/src/: cache.rs  collaboration_mode_presets.rs  collaboration_mode_presets_tests.rs  config.rs  lib.rs  manager.rs  manager_tests.rs  model_info.rs  model_info_overrides_tests.rs  test_support.rs
crates/peregrine-move-graphs/: Cargo.toml
crates/peregrine-move-graphs/src/: call_graph.rs  dependency_graph.rs  graph_builder.rs  lib.rs
crates/peregrine-move-insights/: Cargo.toml
crates/peregrine-move-insights/src/: attack_surface.rs  lib.rs  report.rs  scanner_report.rs
crates/peregrine-move-model/: Cargo.toml
crates/peregrine-move-model/src/: graph_builder.rs  lib.rs  source_parser.rs  state_access_graph.rs  type_graph.rs
crates/peregrine-movy-fuzz-adapter/: Cargo.toml
crates/peregrine-movy-fuzz-adapter/src/: lib.rs
crates/peregrine-package-resolution/: Cargo.toml
crates/peregrine-package-resolution/src/: lib.rs
crates/peregrine-plugins/: Cargo.toml
crates/peregrine-plugins/src/: lib.rs  paths.rs  registry.rs  types.rs
crates/peregrine-project-loader/: Cargo.toml
crates/peregrine-project-loader/src/: lib.rs  pipeline.rs  stages.rs  tests.rs
crates/peregrine-provider-registry/: Cargo.toml
crates/peregrine-provider-registry/src/: lib.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_preview.rs  helper_args.rs  lib.rs  main.rs  menu.rs  move_project.rs  state.rs
src-tauri/src/commands/: analyzers.rs  files.rs  indexer.rs  metadata.rs  mod.rs  move_analyzer.rs  ollama.rs  plugins.rs  sui.rs  terminal.rs
(+1991 files in other folders)
