[workspace]
members = [
  "src-tauri",
  "crates/peregrine",
  "crates/peregrine-adapters",
  "crates/peregrine-dynamic-analysis",
  "crates/peregrine-indexer",
  "crates/peregrine-import-engine",
  "crates/peregrine-package-resolution",
  "crates/peregrine-plugins",
  "crates/peregrine-scanner",
  "crates/peregrine-static-analysis",
  "crates/peregrine-types",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
clap = { version = "4.6.1", features = ["derive"] }
base64 = "0.22"
crossterm = "0.25.0"
globset = "0.4"
hex = "0.4"
libloading = "0.8"
move-command-line-common = { path = "../oss/sui/external-crates/move/crates/move-command-line-common" }
move-binary-format = { path = "../oss/sui/external-crates/move/crates/move-binary-format" }
move-bytecode-source-map = { path = "../oss/sui/external-crates/move/crates/move-bytecode-source-map" }
move-compiler = { path = "../oss/sui/external-crates/move/crates/move-compiler" }
move-cli = { path = "../oss/sui/external-crates/move/crates/move-cli" }
move-decompiler = { path = "../oss/sui/external-crates/move/crates/move-decompiler" }
move-disassembler = { path = "../oss/sui/external-crates/move/crates/move-disassembler" }
move-ir-types = { path = "../oss/sui/external-crates/move/crates/move-ir-types" }
move-model-2 = { path = "../oss/sui/external-crates/move/crates/move-model-2" }
move-package-alt-compilation = { path = "../oss/sui/external-crates/move/crates/move-package-alt-compilation" }
move-prover-boogie-backend = { path = "../oss/sui-prover/crates/move-prover-boogie-backend" }
move-stackless-bytecode = { path = "../oss/sui-prover/crates/move-stackless-bytecode" }
movy = { path = "../oss/movy/crates/movy", default-features = false, features = ["sui-fuzz"] }
peregrine-adapters = { path = "crates/peregrine-adapters" }
peregrine-dynamic-analysis = { path = "crates/peregrine-dynamic-analysis" }
peregrine-indexer = { path = "crates/peregrine-indexer" }
peregrine-import-engine = { path = "crates/peregrine-import-engine" }
peregrine-package-resolution = { path = "crates/peregrine-package-resolution" }
peregrine-plugins = { path = "crates/peregrine-plugins" }
peregrine-scanner = { path = "crates/peregrine-scanner" }
peregrine-static-analysis = { path = "crates/peregrine-static-analysis" }
peregrine-types = { path = "crates/peregrine-types" }
pulldown-cmark = "0.12"
reqwest = { version = "0.13.2", default-features = false, features = ["rustls"] }
regex = "1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sui = { path = "../oss/sui/crates/sui", package = "sui", features = ["tracing"] }
sui-package-alt = { path = "../oss/sui/crates/sui-package-alt" }
sui-prover = { path = "../oss/sui-prover/crates/sui-prover" }
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tauri = { version = "=2.11.2", features = [] }
tauri-build = { version = "=2.6.2", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-opener = "=2.5.4"
tempfile = "3"
tokio = { version = "=1.49.0", features = ["rt-multi-thread"] }
toml = "0.8"
walkdir = "2"
wasmtime = "28"
wat = "1"

[patch.crates-io]
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-axum = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-value = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
core2 = { path = "vendor/core2-0.4.0" }
simplelog = { path = "vendor/simplelog-0.9.0" }
