[workspace]
members = [
  "src-tauri",
  "crates/peregrine-analysis",
  "crates/peregrine-analysis-engine",
  "crates/peregrine-audit-store",
  "crates/peregrine-security-tools",
  "crates/peregrine-sui-adapter",
  "crates/peregrine-sui-security-adapter",
  "crates/peregrine-plugin/sui-move",
  "crates/peregrine-sui-dynamic-analysis",
  "crates/peregrine-sui-bytecode",
  "crates/peregrine-helper",
  "crates/peregrine-helper-protocol",
  "crates/peregrine-sui-indexer",
  "crates/peregrine-sui-import-engine",
  "crates/peregrine-sui-move-graph",
  "crates/peregrine-sui-move-insights",
  "crates/peregrine-sui-move-model",
  "crates/peregrine-sui-move-analyzer",
  "crates/peregrine-sui-mcp-protocol",
  "crates/peregrine-sui-move-analyzer-mcp-protocol",
  "crates/peregrine-mcp-client",
  "crates/peregrine-mcp-server/sui",
  "crates/peregrine-mcp-server/sui-move-analyzer",
  "crates/peregrine-memwal",
  "crates/peregrine-sui-package-resolution",
  "crates/peregrine-sui-project-loader",
  "crates/peregrine-plugins",
  "crates/peregrine-sui-scanner",
  "crates/peregrine-sui-static-analysis",
  "crates/peregrine-terminal",
  "crates/peregrine-tui",
  "crates/peregrine-types",
  "crates/peregrine-core",
  "crates/peregrine-skills",
  "crates/memories/read",
  "crates/peregrine-client",
  "crates/peregrine-config",
  "crates/peregrine-app-server-types",
  "crates/peregrine-api",
  "crates/peregrine-model-provider",
  "crates/peregrine-anthropic",
  "crates/peregrine-provider-registry",
  "crates/peregrine-app-server",
  "crates/peregrine-app-server-client",
  "crates/peregrine-app-server-daemon",
  "crates/peregrine-app-server-protocol",
  "crates/peregrine-app-server-test-client",
  "crates/peregrine-app-server-transport",
  "crates/memories/write",
  "crates/peregrine-utils/home-dir",
  "crates/peregrine-core/tests/common",
  "crates/peregrine-app-server/tests/common",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.lints]
rust = {}

[workspace.lints.clippy]
await_holding_invalid_type = "deny"
await_holding_lock = "deny"
expect_used = "deny"
identity_op = "deny"
manual_clamp = "deny"
manual_filter = "deny"
manual_find = "deny"
manual_flatten = "deny"
manual_map = "deny"
manual_memcpy = "deny"
manual_non_exhaustive = "deny"
manual_ok_or = "deny"
manual_range_contains = "deny"
manual_retain = "deny"
manual_strip = "deny"
manual_try_fold = "deny"
manual_unwrap_or = "deny"
needless_borrow = "deny"
needless_borrowed_reference = "deny"
needless_collect = "deny"
needless_late_init = "deny"
needless_option_as_deref = "deny"
needless_question_mark = "deny"
needless_update = "deny"
redundant_clone = "deny"
redundant_closure = "deny"
redundant_closure_for_method_calls = "deny"
redundant_static_lifetimes = "deny"
trivially_copy_pass_by_ref = "deny"
uninlined_format_args = "deny"
unnecessary_filter_map = "deny"
unnecessary_lazy_evaluations = "deny"
unnecessary_sort_by = "deny"
unnecessary_to_owned = "deny"
unwrap_used = "deny"

[workspace.dependencies]
peregrine-analysis = { path = "crates/peregrine-analysis" }
peregrine-analysis-engine = { path = "crates/peregrine-analysis-engine" }
peregrine-audit-store = { path = "crates/peregrine-audit-store" }
peregrine-security-tools = { path = "crates/peregrine-security-tools" }
age = "0.11.1"
allocative = "0.3.3"
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "9248f8d3951df750360308df22618e5978ad6dc0" }
ansi-to-tui = "7.0.0"
anyhow = "1.0.71"
app_test_support = { path = "crates/peregrine-app-server/tests/common" }
arboard = { version = "3", features = ["wayland-data-control"] }
arc-swap = "1.9.0"
assert_cmd = "2"
assert_matches = "1.5.0"
async-channel = "2.3.1"
async-io = "2.6.0"
async-stream = "0.3.6"
async-trait = "0.1.89"
aws-config = "1"
aws-credential-types = "1"
aws-sigv4 = "1"
aws-types = "1"
axum = { version = "0.8", default-features = false }
base64 = "0.22"
bip32 = "0.4.0"
bm25 = "2.3.2"
bytes = "1.10.1"
chardetng = "0.1.17"
chrono = "0.4.43"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
color-eyre = "0.6.3"
constant_time_eq = "0.3.1"
core_test_support = { path = "crates/peregrine-core/tests/common" }
crossbeam-channel = "0.5.15"
crossterm = "0.25.0"
crossterm-keybind = { version = "0.3.3", features = ["derive"] }
crypto_box = { version = "0.9.1", features = ["seal"] }
csv = "1.3.1"
ctor = "0.6.3"
codex-app-server-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-config = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-core = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-protocol = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
deno_core_icudata = "0.77.0"
derive_more = "2"
diffy = "0.4.2"
dirs = "4.0.0"
divan = "0.1.21"
dns-lookup = "3.0.1"
dotenvy = "0.15.7"
dunce = "1.0.4"
ed25519-dalek = { version = "2.2.0", features = ["pkcs8"] }
encoding_rs = "0.8.35"
env_logger = "0.11.9"
eventsource-stream = "0.2.3"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "5f87e04bb21d295ef6b39375a06615d45cbb906c" }
flate2 = "1.1.8"
futures = { version = "0.3", default-features = false }
gethostname = "1.1.0"
gix = { version = "0.81.0", default-features = false, features = ["sha1"] }
glob = "0.3"
globset = "0.4"
hex = "0.4"
hmac = "0.12.1"
http = "1.3.1"
iana-time-zone = "0.1.64"
icu_decimal = "2.1"
icu_locale_core = "2.1"
icu_provider = { version = "2.1", features = ["sync"] }
ignore = "0.4.25"
image = { version = "^0.25.9", default-features = false }
include_dir = "0.7.4"
indexmap = "2.12.0"
insta = "1.46.3"
inventory = "0.3.19"
itertools = "0.14.0"
jsonptr = { version = "0.7.1", default-features = false }
jsonwebtoken = "9.3.1"
keyring = { version = "3.6", default-features = false }
landlock = "0.4.4"
lazy_static = "1"
libc = "0.2.182"
libloading = "0.8"
log = "0.4"
lru = "0.16.3"
maplit = "1.0.2"
mcp_test_support = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
mime_guess = "2.0.5"
move-analyzer = { path = "../oss/sui/external-crates/move/crates/move-analyzer" }
move-binary-format = { path = "../oss/sui/external-crates/move/crates/move-binary-format" }
move-bytecode-source-map = { path = "../oss/sui/external-crates/move/crates/move-bytecode-source-map" }
move-cli = { path = "../oss/sui/external-crates/move/crates/move-cli" }
move-command-line-common = { path = "../oss/sui/external-crates/move/crates/move-command-line-common" }
move-compiler = { path = "../oss/sui/external-crates/move/crates/move-compiler" }
move-decompiler = { path = "../oss/sui/external-crates/move/crates/move-decompiler" }
move-disassembler = { path = "../oss/sui/external-crates/move/crates/move-disassembler" }
move-ir-types = { path = "../oss/sui/external-crates/move/crates/move-ir-types" }
move-model-2 = { path = "../oss/sui/external-crates/move/crates/move-model-2" }
move-package-alt-compilation = { path = "../oss/sui/external-crates/move/crates/move-package-alt-compilation" }
move-prover-boogie-backend = { path = "../oss/sui-prover/crates/move-prover-boogie-backend" }
move-stackless-bytecode = { path = "../oss/sui-prover/crates/move-stackless-bytecode" }
movy = { path = "../oss/movy/crates/movy", default-features = false, features = ["sui-fuzz"] }
multimap = "0.10.0"
notify = "8.2.0"
nucleo = { git = "https://github.com/helix-editor/nucleo.git", rev = "4253de9faabb4e5c6d81d946a5e35a90f87347ee" }
once_cell = "1.20.2"
openssl-sys = "*"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry_sdk = "0.31.0"
os_info = "3.12.0"
owo-colors = "4.3.0"
path-absolutize = "3.1.1"
pathdiff = "0.2"
peregrine-sui-adapter = { path = "crates/peregrine-sui-adapter" }
peregrine-sui-security-adapter = { path = "crates/peregrine-sui-security-adapter" }
peregrine-sui-move-knowledge-plugin = { path = "crates/peregrine-plugin/sui-move" }
codex-agent-graph-store = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-agent-identity = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-analytics = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-ansi-escape = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-api = { path = "crates/peregrine-api" }
peregrine-app-server = { path = "crates/peregrine-app-server" }
peregrine-app-server-client = { path = "crates/peregrine-app-server-client" }
peregrine-app-server-daemon = { path = "crates/peregrine-app-server-daemon" }
peregrine-app-server-protocol = { path = "crates/peregrine-app-server-protocol" }
peregrine-app-server-test-client = { path = "crates/peregrine-app-server-test-client" }
peregrine-app-server-transport = { path = "crates/peregrine-app-server-transport" }
peregrine-app-server-types = { path = "crates/peregrine-app-server-types" }
codex-apply-patch = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-arg0 = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-async-utils = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-aws-auth = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-backend-client = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-backend-openapi-models = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-bytecode = { path = "crates/peregrine-sui-bytecode" }
codex-chatgpt = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-client = { path = "crates/peregrine-client" }
codex-cloud-requirements = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-cloud-tasks-client = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-cloud-tasks-mock-client = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-code-mode = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-collaboration-mode-templates = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-config = { path = "crates/peregrine-config" }
codex-connectors = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-core = { path = "crates/peregrine-core" }
codex-core-api = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-core-plugins = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-core-skills = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-dynamic-analysis = { path = "crates/peregrine-sui-dynamic-analysis" }
codex-exec = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-exec-server = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-execpolicy = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-experimental-api-macros = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-extension-api = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-external-agent-migration = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-external-agent-sessions = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-features = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-feedback = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-file-search = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-file-system = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-file-watcher = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-git-utils = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-goal-extension = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-guardian = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-image-generation-extension = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-helper-protocol = { path = "crates/peregrine-helper-protocol" }
codex-hooks = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-import-engine = { path = "crates/peregrine-sui-import-engine" }
peregrine-sui-indexer = { path = "crates/peregrine-sui-indexer" }
codex-install-context = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-keyring-store = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-linux-sandbox = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-lmstudio = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-login = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-mcp = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-mcp-server = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-memories-extension = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-memories-read = { path = "crates/memories/read" }
peregrine-memories-write = { path = "crates/memories/write" }
codex-message-history = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-model-provider-info = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-models-manager = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-model-provider = { path = "crates/peregrine-model-provider" }
peregrine-anthropic = { path = "crates/peregrine-anthropic" }
peregrine-provider-registry = { path = "crates/peregrine-provider-registry" }
peregrine-sui-move-graph = { path = "crates/peregrine-sui-move-graph" }
peregrine-sui-move-insights = { path = "crates/peregrine-sui-move-insights" }
peregrine-sui-move-model = { path = "crates/peregrine-sui-move-model" }
peregrine-sui-move-analyzer = { path = "crates/peregrine-sui-move-analyzer" }
peregrine-sui-mcp-protocol = { path = "crates/peregrine-sui-mcp-protocol" }
peregrine-sui-move-analyzer-mcp-protocol = { path = "crates/peregrine-sui-move-analyzer-mcp-protocol" }
peregrine-mcp-client = { path = "crates/peregrine-mcp-client" }
codex-network-proxy = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-ollama = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-otel = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-package-resolution = { path = "crates/peregrine-sui-package-resolution" }
codex-plugin = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-plugins = { path = "crates/peregrine-plugins" }
codex-process-hardening = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-project-loader = { path = "crates/peregrine-sui-project-loader" }
codex-realtime-webrtc = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-responses-api-proxy = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-rmcp-client = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-rollout = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-rollout-trace = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-sandboxing = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-scanner = { path = "crates/peregrine-sui-scanner" }
codex-secrets = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-shell-command = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-shell-escalation = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
# Keep the package/API name expected by codex-core-skills, but embed Peregrine's
# restricted default skill bundle.
codex-skills = { path = "crates/peregrine-skills" }
codex-state = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-sui-static-analysis = { path = "crates/peregrine-sui-static-analysis" }
codex-stdio-to-uds = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-terminal = { path = "crates/peregrine-terminal" }
codex-terminal-detection = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-test-binary-support = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-thread-store = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-tools = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-tui = { path = "crates/peregrine-tui" }
peregrine-types = { path = "crates/peregrine-types" }
codex-uds = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-absolute-path = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-approval-presets = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-cache = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-cargo-bin = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-cli = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-elapsed = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-fuzzy-match = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
peregrine-utils-home-dir = { path = "crates/peregrine-utils/home-dir" }
codex-utils-image = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-json-to-toml = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-oss = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-output-truncation = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-path = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-plugins = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-pty = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-rustls-provider = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-sandbox-summary = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-sleep-inhibitor = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-stream-parser = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-string = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-utils-template = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-v8-poc = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-web-search-extension = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }
codex-windows-sandbox = { git = "https://github.com/openai/codex", tag = "rust-v0.136.0-alpha.2" }

portable-pty = "0.9"
predicates = "3"
pretty_assertions = "1.4.1"
pulldown-cmark = "0.12"
quick-xml = "0.38.4"
rand = "0.9"
ratatui-core = "0.1.0"
ratatui = "0.30.0"
ratatui-macros = "0.6.0"
rcgen = { version = "0.14.7", default-features = false, features = ["aws_lc_rs", "pem"] }
regex = "1"
regex-lite = "0.1.8"
reqwest = { version = "0.12", features = ["cookies"] }
rmcp = { version = "1.7.0", default-features = false }
runfiles = { git = "https://github.com/dzbarsky/rules_rust", rev = "b56cbaa8465e74127f1ea216f813cd377295ad81" }
rusqlite = { version = "0.37", features = ["bundled"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-native-certs = "0.8.3"
rustls-pki-types = "1.14.0"
schemars = "0.8.22"
seccompiler = "0.5.0"
semver = "1.0"
sentry = "0.46.0"
serde = { version = "1", features = ["derive"] }
serde_ignored = "0.1.14"
serde_json = "1"
serde_path_to_error = "0.1.20"
serde_with = "3.17"
serde_yaml = "0.9"
serial_test = "3.2.0"
sha1 = "0.10.6"
sha2 = "0.10"
shlex = "1.3.0"
similar = "2.7.0"
socket2 = "0.6.1"
sqlx = { version = "0.9.0", default-features = false, features = ["chrono", "json", "macros", "migrate", "runtime-tokio", "tls-rustls", "sqlite-bundled", "time", "uuid"] }
starlark = "0.13.0"
strum = "0.27.2"
strum_macros = "0.28.0"
sui = { path = "../oss/sui/crates/sui", package = "sui", features = ["tracing"] }
sui-config = { path = "../oss/sui/crates/sui-config" }
sui-keys = { path = "../oss/sui/crates/sui-keys" }
sui-package-alt = { path = "../oss/sui/crates/sui-package-alt" }
sui-prover = { path = "../oss/sui-prover/crates/sui-prover" }
sui-sdk = { path = "../oss/sui/crates/sui-sdk" }
sui-types = { path = "../oss/sui/crates/sui-types" }
supports-color = "3.0.2"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
sys-locale = "0.3.2"
tar = { version = "=0.4.45", default-features = false }
tauri = { version = "=2.11.2", features = [] }
tauri-build = { version = "=2.6.2", features = [] }
tauri-plugin-dialog = "=2.7.1"
tauri-plugin-opener = "=2.5.4"
tempfile = "3"
test-log = "0.2.19"
textwrap = "0.16.2"
thiserror = "2.0.17"
time = "0.3.47"
tiny-bip39 = "1.0.0"
tiny_http = "0.12"
tokio = { version = "=1.49.0", features = ["rt-multi-thread"] }
tokio-stream = "0.1.18"
tokio-test = "0.4"
tokio-tungstenite = { version = "0.28.0", features = ["proxy", "rustls-tls-native-roots"] }
tokio-util = "0.7.18"
toml = "0.9.5"
toml_edit = "0.24.0"
tonic = { version = "0.14.3", default-features = false, features = ["channel", "codegen"] }
tonic-prost = "0.14.3"
tracing = "0.1.44"
tracing-appender = "0.2.3"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = "0.3.22"
tracing-test = "0.2.5"
tree-sitter = "0.25.10"
tree-sitter-bash = "0.25"
ts-rs = "11"
tungstenite = { version = "0.27.0", features = ["deflate", "proxy"] }
uds_windows = "1.1.0"
unicode-segmentation = "1.12.0"
unicode-width = "0.2"
url = "2"
urlencoding = "2.1"
uuid = "1"
v8 = "=147.4.0"
vt100 = "0.16.2"
walkdir = "2"
wasmtime = "28"
wat = "1"
webbrowser = "1.0"
which = "8"
whoami = "1.6.1"
wildmatch = "2.6.1"
winapi-util = "0.1.11"
wiremock = "0.6"
zeroize = "1.8.2"
zip = "2.4.2"
zstd = "0.13"

[patch.crates-io]
async-graphql = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-axum = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
async-graphql-value = { git = "https://github.com/amnn/async-graphql", branch = "v7.0.1-react-18-graphiql-4" }
core2 = { path = "vendor/core2-0.4.0" }
simplelog = { path = "vendor/simplelog-0.9.0" }
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

# Uncomment to debug local changes.
# rmcp = { path = "../../rust-sdk/crates/rmcp" }

[patch."https://github.com/openai/codex"]
codex-skills = { path = "crates/peregrine-skills" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
