[package]
name = "peregrine"
version.workspace = true
description = "A Tauri App"
authors = ["you"]
edition.workspace = true

[lib]
name = "peregrine_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = { workspace = true }
base64 = { workspace = true }
pulldown-cmark = { workspace = true }
reqwest = { workspace = true }
syntect = { workspace = true }
tokio = { workspace = true }
codex-arg0 = { workspace = true }
codex-exec-server = { workspace = true }
codex-feedback = { workspace = true }
codex-rollout = { workspace = true }
codex-state = { workspace = true }
codex-utils-absolute-path = { workspace = true }
peregrine-adapters = { workspace = true }
peregrine-app-server-client = { workspace = true }
peregrine-app-server-protocol = { workspace = true }
peregrine-bytecode = { workspace = true }
peregrine-dynamic-analysis = { workspace = true }
peregrine-helper-protocol = { workspace = true }
peregrine-indexer = { workspace = true }
peregrine-import-engine = { workspace = true }
peregrine-move-graphs = { workspace = true }
peregrine-move-model = { workspace = true }
peregrine-project-loader = { workspace = true }
peregrine-plugins = { workspace = true }
peregrine-static-analysis = { workspace = true }
peregrine-terminal = { workspace = true }
peregrine-config = { workspace = true }
peregrine-utils-home-dir = { workspace = true }
toml = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
