[package]
name = "peregrine-adapters"
version.workspace = true
edition.workspace = true
description = "Blockchain adapter boundaries for Peregrine"

[dependencies]
alloy = { version = "=1.4.3", default-features = false }
alloy-chains = { version = "=0.2.29", default-features = false }
alloy-consensus = { version = "=1.4.3", default-features = false }
alloy-consensus-any = { version = "=1.4.3", default-features = false }
alloy-contract = { version = "=1.4.3", default-features = false }
alloy-core = { version = "=1.5.2", default-features = false }
alloy-dyn-abi = { version = "=1.5.2", default-features = false }
alloy-eips = { version = "=1.4.3", default-features = false }
alloy-genesis = { version = "=1.4.3", default-features = false }
alloy-json-abi = { version = "=1.5.2", default-features = false }
alloy-json-rpc = { version = "=1.4.3", default-features = false }
alloy-network = { version = "=1.4.3", default-features = false }
alloy-network-primitives = { version = "=1.4.3", default-features = false }
alloy-primitives = { version = "=1.5.2", default-features = false }
alloy-provider = { version = "=1.4.3", default-features = false }
alloy-pubsub = { version = "=1.4.3", default-features = false }
alloy-rlp = { version = "=0.3.12", default-features = false }
alloy-rlp-derive = { version = "=0.3.12", default-features = false }
alloy-rpc-client = { version = "=1.4.3", default-features = false }
alloy-rpc-types = { version = "=1.4.3", default-features = false }
alloy-rpc-types-any = { version = "=1.4.3", default-features = false }
alloy-rpc-types-eth = { version = "=1.4.3", default-features = false }
alloy-serde = { version = "=1.4.3", default-features = false }
alloy-signer = { version = "=1.4.3", default-features = false }
alloy-signer-local = { version = "=1.4.3", default-features = false }
alloy-sol-macro = { version = "=1.5.2", default-features = false }
alloy-sol-macro-expander = { version = "=1.5.2", default-features = false }
alloy-sol-macro-input = { version = "=1.5.2", default-features = false }
alloy-sol-type-parser = { version = "=1.5.2", default-features = false }
alloy-sol-types = { version = "=1.5.2", default-features = false }
alloy-transport = { version = "=1.4.3", default-features = false }
alloy-transport-http = { version = "=1.4.3", default-features = false }
alloy-transport-ws = { version = "=1.4.3", default-features = false }
alloy-trie = { version = "=0.9.3", default-features = false }
alloy-tx-macros = { version = "=1.4.3", default-features = false }
clap = { workspace = true }
serde = { workspace = true }
sui = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
