[package]
name = "peregrine-analysis-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Blockchain-agnostic plugin orchestration engine for Peregrine"

[lints]
workspace = true

[dependencies]
peregrine-analysis = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }
