[package]
name = "peregrine-anthropic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait = { workspace = true }
codex-login = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-models-manager = { workspace = true }
codex-protocol = { workspace = true }
eventsource-stream = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
peregrine-api = { workspace = true }
peregrine-client = { workspace = true }
peregrine-model-provider = { workspace = true }
peregrine-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["sync", "time"] }
tracing = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
pretty_assertions = { workspace = true }

[lints]
workspace = true

[lib]
doctest = false
